<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/ll_pro_left"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pro_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_album"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pro_album_num"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_album_num"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_pro_right"
        android:layout_marginRight="100dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pro_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_comment"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pro_comment_num"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_album_num"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>
