<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/pro_rl_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/pro_iv_album_item"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/pro_tv_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@id/pro_iv_album_item"
            android:text="@string/album_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pro_tv_album_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pro_tv_album_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/pro_iv_album_item"
            android:text="@string/pro_album_num"
            android:textColor="#666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pro_tv_album_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pro_tv_album_num"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/pro_iv_album_item"
            android:text="@string/promul_time"
            android:textColor="#888888"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/pro_tv_no_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="暂无其他专辑"
        android:visibility="gone" />

</RelativeLayout>