<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/rl_author"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#f0f0f0" >

        <ImageView
            android:id="@+id/promulgator_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:padding="2dp" 
            android:background="@drawable/home_headpic_9"
            android:contentDescription="@string/pic_description"/>

        <TextView
            android:id="@+id/promulgator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/promulgator_icon"
            android:text="@string/promul_name"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/promulgate_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/promulgator_name"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/promulgator_icon"
            android:textColor="#999999"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/album_ll_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/album_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/xihuan" />

            <TextView
                android:id="@+id/album_tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="喜欢" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/album_ll_guanzhu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/album_ll_favorite"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/album_guanzhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/jiaguanzhu" />

            <TextView
                android:id="@+id/album_tv_guanzhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="关注" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/add_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_author"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_text"
        android:textColor="#000000"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_tv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <com.bccv.meitu.view.AddLableView
            android:id="@+id/test_addlable"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_album_lable"
            android:clickable="true"
            android:padding="13dp" />

        <com.bccv.meitu.view.DefaultLableView
            android:id="@+id/test_lableview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true" />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/test_et"
            android:layout_width="180dp"
            android:hint="输入标签"
            android:textSize="15sp"
            android:textColor="#000000"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="3dp"
            android:visibility="gone"
            android:paddingRight="5dp"
            android:background="@drawable/shurukuang2"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/test_bt"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_lable_selector"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:layout_below="@id/ll_lable"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0" />

    <TextView
        android:id="@+id/more_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/more_album"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/ll_rela_album"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/more_album"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_rela_album_first"
            android:visibility="gone"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/iv_rela_album_second"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="5dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_rela_album_third"
            android:visibility="gone"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="5dp" />
        
    </LinearLayout>
    
    <TextView 
        android:id="@+id/album_no_rela_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_rela_album"
        android:layout_centerHorizontal="true"
        android:textColor="#888888"
        android:textSize="15sp"
        android:visibility="gone"
        android:text="暂无专辑"/>

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:layout_below="@id/album_no_rela_album"
        android:layout_marginTop="20dp"
        android:background="#f0f0f0" />

    <TextView
        android:id="@+id/hot_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/hot_comment"
        android:textColor="#000000" />
    
    <TextView 
        android:id="@+id/album_no_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hot_comment"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="50dp"
        android:textColor="#888888"
        android:textSize="15sp"
        android:visibility="gone"
        android:text="暂无评论,点击 添加评论"/>

    <!-- <RelativeLayout
        android:id="@+id/album_rl_comment1"
        android:layout_below="@id/hot_comment"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/home_headpic_9"
            android:padding="2dp"
            android:contentDescription="@string/pic_description"
            android:src="@drawable/ic_img_user_default" />

        <TextView
            android:id="@+id/comment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_icon"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_icon"
            android:text="@string/comment_name"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_name"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_icon"
            android:text="@string/example_comment"
            android:textColor="#666666"
            android:textSize="13sp" />
        
        <TextView 
            android:id="@+id/tv_album_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="1小时前"
            android:layout_alignParentRight="true"
            android:textSize="10sp"
            android:textColor="#999999"/>
        
    </RelativeLayout> -->
</RelativeLayout>